--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="../src/normalize.css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -51,6 +52,6 @@
   </head>
 
   <body>
-    <div id="root"></div>
+      <div id="root"></div>
   </body>
 </html>
